# Z3-User-Propagator-Example

./: All8QueensProblem.cpp  All8QueensProblem.sln  CMakeLists.txt  LazySortingNetworkPropagator.h  big_num.cpp  big_num.h  common.h  disjointness.cpp  distinctness.cpp  example.cpp  interval_tree.hpp  nqueens.cpp  opt_sorting.cpp  sorting1.cpp  sorting10.cpp  sorting11.cpp  sorting12.cpp  sorting13.cpp  sorting14.cpp  sorting2.cpp  sorting3.cpp  sorting4.cpp  sorting5.cpp  sorting6.cpp  sorting7.cpp  sorting8.cpp  sorting9.cpp  user_propagator.h  user_propagator_created_maximisation.h  user_propagator_higher_dimension.h  user_propagator_internal_maximisation.h  user_propagator_subquery_maximisation.h  user_propagator_with_theory.h  user_propagator_with_theory2.h  z3++.h
All8QueensProblem/: All8QueensProblem.cpp  All8QueensProblem.vcxproj  All8QueensProblem.vcxproj.filters
